--- a/templates/parameters_metad.toml
+++ b/templates/parameters_metad.toml
@@ -3,25 +3,28 @@ L = [12, 12, 12, 12]
 beta = 6.0
 kind_of_gaction = "wilson"
 numtherm = 20
-numsteps = 100
+numsteps = 10
 initial = "cold"
 update_method = "HMC"
 
 ["Bias Settings"]
 # general bias parameters
-kind_of_bias = "metad"
+kind_of_bias = "opes"
 kind_of_cv = "clover"
 numsmears_for_cv = 4
 rhostout_for_cv = 0.12
-is_static = true
+is_static = false
 symmetric = true
 stride = 1
 cvlims = [-5, 5]
 biasfactor = "Inf"
+penalty_weight = 100
 # metadynamics specific parameters
 bin_width = 0.02
 meta_weight = 0.01
-penalty_weight = 100
+# opes specific parameters
+barrier = 40
+sigma0 = 0.1
 # usebiases = [
 #     "./metapotentials/L16x16x16x16_dbw2_beta1.25/dummy.txt",
 # ]
@@ -37,7 +40,7 @@ logdir = "./logs/L12x12x12x12_wilson_beta6.0/test_metad"
 logfile = "logs.txt"
 measurement_basedir = "./measurements/L12x12x12x12_wilson_beta6.0/test_metad"
 measurement_dir = "raw_data"
-randomseed = 123
+randomseed = 2805
 verboselevel = 1
 bias_basedir = "./metapotentials/L12x12x12x12_wilson_beta6.0/test_metad"
 bias_dir = "bias"
