--- a/templates/parameters_metro.toml
+++ b/templates/parameters_metro.toml
@@ -2,20 +2,23 @@
 L = [12, 12, 12, 12]
 beta = 6.0
 kind_of_gaction = "wilson"
-numtherm = 50
-numsteps = 100
+numtherm = 20
+numsteps = 10
 initial = "cold"
 update_method = "metropolis"
-metro_multi_hit = 10
+metro_numhits = 10
 metro_target_acc = 0.5
 metro_epsilon = 0.1
+eo = true
+or_algorithm = "subgroups"
+numorelax = 4
 
 ["System Settings"]               
 logdir = "./logs/L12x12x12x12_wilson_beta6.0/test_metro"
 logfile = "logs.txt"
 measurement_basedir = "./measurements/L12x12x12x12_wilson_beta6.0/test_metro"
 measurement_dir = "raw_data"
-randomseed = 0
+randomseed = 2805
 verboselevel = 1
 overwrite = true
 
@@ -39,8 +42,8 @@ kinds_of_topological_charge = ["plaquette", "clover", "improved"]
 
 ["Measurement Settings".measurements.Wilson_loop]
 measure_every = 1
-Rmax = 4
-Tmax = 4
+Rmax = 2
+Tmax = 2
 
 ["Gradient Flow Settings"]
 flow_integrator = "euler"
