--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "MetaQCD"
 uuid = "31f46e0f-f1ce-4e94-be20-2bb7f09e036f"
 authors = ["GianlucaFuwa <gianlucafuwa@gmail.com> and contributors"]
-version = "1.0.0"
+version = "0.2.0"
 
 [deps]
+Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
@@ -23,6 +24,7 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
+Accessors = "0.1"
 Aqua = "0.6"
 DelimitedFiles = "1.9"
 JLD2 = "0.4"
