--- a/templates/parameters_build.toml
+++ b/templates/parameters_build.toml
@@ -8,8 +8,7 @@ initial = "cold"
 update_method = "HMC"
 
 ["Bias Settings"]
-# bias parameters
-kind_of_bias = "opes"
+kind_of_bias = "OPES"
 kind_of_cv = "clover"
 numsmears_for_cv = 4
 rhostout_for_cv = 0.12
@@ -27,18 +26,17 @@ barrier = 40
 sigma0 = 0.1
 
 ["HMC Settings"]
-hmc_deltatau = 0.2
+hmc_trajectory = 1
 hmc_steps = 5
 hmc_integrator = "OMF4"
 
 ["System Settings"]               
-logdir = "./logs/L16x16x16x16_dbw2_beta1.25/test_build"
-logfile = "logs.txt"
-measurement_basedir = "./measurements/L16x16x16x16_dbw2_beta1.25/test_build"
+log_dir = "logs/L16x16x16x16_dbw2_beta1.25/test_build"
+measurement_basedir = "measurements/L16x16x16x16_dbw2_beta1.25/test_build"
 measurement_dir = "raw_data"
-randomseed = 2805
-verboselevel = 1
-bias_basedir = "./metapotentials/L16x16x16x16_dbw2_beta1.25/test_build"
+randomseed = 0
+verboselevel = 2
+bias_basedir = "metapotentials/L16x16x16x16_dbw2_beta1.25/test_build"
 bias_dir = "bias"
 overwrite = true
 
