--- a/templates/parameters_metro.toml
+++ b/templates/parameters_metro.toml
@@ -14,12 +14,11 @@ or_algorithm = "subgroups"
 numorelax = 4
 
 ["System Settings"]               
-logdir = "./logs/L12x12x12x12_wilson_beta6.0/test_metro"
-logfile = "logs.txt"
-measurement_basedir = "./measurements/L12x12x12x12_wilson_beta6.0/test_metro"
+log_dir = "logs/L12x12x12x12_wilson_beta6.0/test_metro"
+measurement_basedir = "measurements/L12x12x12x12_wilson_beta6.0/test_metro"
 measurement_dir = "raw_data"
-randomseed = 2805
-verboselevel = 1
+randomseed = 0
+verboselevel = 3
 overwrite = true
 
 ["Measurement Settings".measurements.Energy_density]
