--- a/templates/parameters_ptmetad.toml
+++ b/templates/parameters_ptmetad.toml
@@ -1,9 +1,9 @@
 ["Physical Settings"]
-L = [12, 12, 12, 12]
-beta = 6.0
-kind_of_gaction = "wilson"
-numtherm = 10
-numsteps = 10
+L = [16, 16, 16, 16]
+beta = 1.25
+kind_of_gaction = "dbw2"
+numtherm = 20
+numsteps = 1
 initial = "cold"
 update_method = "heatbath"
 numheatbath = 1
@@ -38,19 +38,17 @@ non_metadynamics_updates = 1
 measure_on_all = true
 
 ["HMC Settings"]
-hmc_deltatau = 0.2
+hmc_trajectory = 1
 hmc_steps = 5
 hmc_integrator = "OMF4"
-# hmc_friction = 0.39269908169872414
 
 ["System Settings"]               
-logdir = "./logs/L12x12x12x12_wilson_beta6.0/test_ptmetad"
-logfile = "logs.txt"
-measurement_basedir = "./measurements/LL12x12x12x12_wilson_beta6.0test_ptmetad"
+log_dir = "logs/L16x16x16x16_dbw2_beta1.25/test_ptmetad"
+measurement_basedir = "measurements/L16x16x16x16_dbw2_beta1.25/test_ptmetad"
 measurement_dir = "raw_data"
-randomseed = 2805
+randomseed = 0
 verboselevel = 2
-bias_basedir = "./metapotentials/L12x12x12x12_wilson_beta6.0/test_ptmetad"
+bias_basedir = "metapotentials/L16x16x16x16_dbw2_beta1.25/test_ptmetad"
 bias_dir = "bias"
 overwrite = true
 
