--- a/templates/parameters_hmc.toml
+++ b/templates/parameters_hmc.toml
@@ -14,9 +14,8 @@ hmc_steps = 5
 hmc_integrator = "OMF4"
 
 ["System Settings"]               
-log_dir = "logs/L12x12x12x12_wilson_beta6.0/test_hmc"
-measurement_basedir = "measurements/L12x12x12x12_wilson_beta6.0/test_hmc"
-measurement_dir = "raw_data"
+log_dir = "L12x12x12x12_wilson_beta6.0/test_hmc"
+measurement_dir = "L12x12x12x12_wilson_beta6.0/test_hmc"
 randomseed = 0
 verboselevel = 2
 overwrite = true
