--- a/templates/parameters_build.toml
+++ b/templates/parameters_build.toml
@@ -3,12 +3,12 @@ L = [16, 16, 16, 16]
 beta = 1.25
 kind_of_gaction = "dbw2"
 numtherm = 10
-numsteps = 1
+numsteps = 10
 initial = "cold"
 update_method = "HMC"
 
 ["Bias Settings"]
-kind_of_bias = "OPES"
+kind_of_bias = "opes"
 kind_of_cv = "clover"
 numsmears_for_cv = 4
 rhostout_for_cv = 0.12
@@ -31,13 +31,11 @@ hmc_steps = 5
 hmc_integrator = "OMF4"
 
 ["System Settings"]               
-log_dir = "logs/L16x16x16x16_dbw2_beta1.25/test_build"
-measurement_basedir = "measurements/L16x16x16x16_dbw2_beta1.25/test_build"
-measurement_dir = "raw_data"
+log_dir = "L16x16x16x16_dbw2_beta1.25/test_build"
+measurement_dir = "L16x16x16x16_dbw2_beta1.25/test_build"
+bias_basedir = "L16x16x16x16_dbw2_beta1.25/test_build"
 randomseed = 0
 verboselevel = 2
-bias_basedir = "metapotentials/L16x16x16x16_dbw2_beta1.25/test_build"
-bias_dir = "bias"
 overwrite = true
 
 ["Measurement Settings".measurements.Plaquette]
