--- a/templates/parameters_metad.toml
+++ b/templates/parameters_metad.toml
@@ -39,13 +39,11 @@ hmc_steps = 5
 hmc_integrator = "OMF4"
 
 ["System Settings"]               
-log_dir = "logs/L16x16x16x16_dbw2_beta1.25/test_metad"
-measurement_basedir = "measurements/L16x16x16x16_dbw2_beta1.25/test_metad"
-measurement_dir = "raw_data"
+log_dir = "L16x16x16x16_dbw2_beta1.25/test_metad"
+measurement_dir = "L16x16x16x16_dbw2_beta1.25/test_metad"
+bias_basedir = "L16x16x16x16_dbw2_beta1.25/test_metad"
 randomseed = 0
 verboselevel = 2
-bias_basedir = "metapotentials/L16x16x16x16_dbw2_beta1.25/test_metad"
-bias_dir = "bias"
 overwrite = true
 
 ["Measurement Settings".measurements.Energy_density]
