--- a/templates/parameters_metro.toml
+++ b/templates/parameters_metro.toml
@@ -14,11 +14,10 @@ or_algorithm = "subgroups"
 numorelax = 4
 
 ["System Settings"]               
-log_dir = "logs/L12x12x12x12_wilson_beta6.0/test_metro"
-measurement_basedir = "measurements/L12x12x12x12_wilson_beta6.0/test_metro"
-measurement_dir = "raw_data"
+log_dir = "L12x12x12x12_wilson_beta6.0/test_metro"
+measurement_dir = "L12x12x12x12_wilson_beta6.0/test_metro"
 randomseed = 0
-verboselevel = 3
+verboselevel = 2
 overwrite = true
 
 ["Measurement Settings".measurements.Energy_density]
