--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,23 @@
 alloc-profile.pb.gz
-/logs/
-/measurements/
-/metapotentials/
-/configs/
-/test/test.jl
-/test/logger.jl
-/test/test_JET.jl
+logs/
+measurements/
+metapotentials/
+configs/
+test/test.jl
+test/logger.jl
+test/test_JET.jl
 .vscode/
 run.jl
-/src/dirac/
-/src/mpi/mpitest.jl
-/src/system/mainrun_mpi.jl
+src/dirac/
+src/mpi/mpitest.jl
+src/system/mainrun_mpi.jl
 LocalPreferences.toml
 stability.jl
-/src/utils/algebra.jl
+src/utils/algebra.jl
 plot.jl
 plot_opes.jl
 .VSCodeCounter/
-/test/test_AD.jl
-/test/testsmearing.jl
+test/test_AD.jl
+test/testsmearing.jl
+zz_features/
+ZZZ_NOTES.txt
