--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,6 @@ version = "0.4.0"
 [deps]
 AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
-Adapt = "79e6a3ab-5dfb-504d-930d-738a2a938a0e"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -17,12 +16,14 @@ KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+MuladdMacro = "46d2c3a1-f734-5fdb-9937-b9b9aeba4221"
 Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
@@ -30,7 +31,6 @@ Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 [compat]
 AMDGPU = "0.7, 0.8"
 Accessors = "0.1"
-Adapt = "3, 4"
 Aqua = "0.6"
 CUDA = "4, 5"
 DelimitedFiles = "1.9"
@@ -38,7 +38,6 @@ JLD2 = "0.4"
 KernelAbstractions = "0.9"
 LoopVectorization = "0.12"
 MPI = "0.20"
-Polyester = "0.7"
 Requires = "1.3"
 StaticArrays = "1.6"
 TimerOutputs = "0.5"
