--- a/.JuliaFormatter.toml
+++ b/.JuliaFormatter.toml
@@ -2,4 +2,4 @@ style = "blue"
 align_matrix = true
 whitespace_ops_in_indices = false
 trailing_comma = true
-ignore = ["src/bias/parametric.jl"]
+ignore = ["src/bias/parametric.jl", "src/utils/simd_vecops.jl"]
