--- a/Project.toml
+++ b/Project.toml
@@ -41,6 +41,7 @@ JLD2 = "0.4"
 KernelAbstractions = "0.9"
 LoopVectorization = "0.12"
 MPI = "0.20"
+Polyester = "0.7.13"
 Requires = "1.3"
 StaticArrays = "1.6"
 TimerOutputs = "0.5"
