--- a/templates/parameters_stagg.toml
+++ b/templates/parameters_stagg.toml
@@ -1,7 +1,7 @@
 ["Physical Settings"]
-L = [4, 4, 4, 4]
-beta = 6.0
-kind_of_gaction = "wilson"
+L = [8, 8, 8, 16]
+beta = 3.5
+kind_of_gaction = "symanzik_tree"
 numtherm = 10
 numsteps = 5
 initial = "cold"
@@ -10,25 +10,27 @@ parity_update = false
 
 ["Dynamical Fermion Settings"]
 fermion_action = "staggered"
-Nf_light = 2
-mass_light = 0.01
+Nf_light = 8
+mass_light = 0.1
 # Nf_heavy = 1
 # mass_heavy = 0.1
+cg_tol = 1e-14
+cg_maxiters = 5000
 
 ["HMC Settings"]
 hmc_trajectory = 1
 hmc_steps = 5
 hmc_integrator = "OMF4"
-hmc_numsmear = 7
-hmc_rhostout = 0.12
+# hmc_numsmear = 7
+# hmc_rhostout = 0.12
 
 ["System Settings"]
 backend = "cpu"
 float_type = "double"
-log_dir = "L4x4x4x4_staggered_beta6.0/test_wilson"
-measurement_dir = "L4x4x4x4_staggered_beta6.0/test_wilson"
+log_dir = "L12x12x12x24_staggered_beta6.0/test_wilson"
+measurement_dir = "L12x12x12x24_staggered_beta6.0/test_wilson"
 randomseed = 0
-verboselevel = 1
+verboselevel = 2
 overwrite = true
 
 ["Measurement Settings".measurements.Energy_density]
