--- a/templates/parameters_stagg.toml
+++ b/templates/parameters_stagg.toml
@@ -1,5 +1,5 @@
 ["Physical Settings"]
-L = [8, 8, 8, 16]
+L = [4, 4, 4, 8]
 beta = 3.5
 kind_of_gaction = "symanzik_tree"
 numtherm = 10
@@ -10,10 +10,8 @@ parity_update = false
 
 ["Dynamical Fermion Settings"]
 fermion_action = "staggered"
-Nf_light = 8
-mass_light = 0.1
-# Nf_heavy = 1
-# mass_heavy = 0.1
+Nf = [2, 1]
+mass = [0.01, 0.2]
 cg_tol = 1e-14
 cg_maxiters = 5000
 
@@ -27,10 +25,10 @@ hmc_integrator = "OMF4"
 ["System Settings"]
 backend = "cpu"
 float_type = "double"
-log_dir = "L12x12x12x24_staggered_beta6.0/test_wilson"
-measurement_dir = "L12x12x12x24_staggered_beta6.0/test_wilson"
+# log_dir = "L4x4x4x8_staggered_beta3.5/test_stagg"
+# measurement_dir = "L4x4x4x8_staggered_beta3.5/test_stagg"
 randomseed = 0
-verboselevel = 2
+verboselevel = 1
 overwrite = true
 
 ["Measurement Settings".measurements.Energy_density]
