--- a/templates/parameters_fermions.toml
+++ b/templates/parameters_fermions.toml
@@ -9,7 +9,7 @@ update_method = "hmc"
 parity_update = false
 
 ["Dynamical Fermion Settings"]
-fermion_action = "staggered"
+fermion_action = "wilson"
 Nf = [2, 1]
 mass = [0.01, 0.2]
 cg_tol = 1e-14
@@ -25,37 +25,37 @@ hmc_integrator = "OMF4"
 ["System Settings"]
 backend = "cpu"
 float_type = "double"
-# log_dir = "L4x4x4x8_staggered_beta3.5/test_stagg"
-# measurement_dir = "L4x4x4x8_staggered_beta3.5/test_stagg"
+# log_dir = ""
+# measurement_dir = ""
 randomseed = 0
 verboselevel = 1
 overwrite = true
 
 ["Measurement Settings".measurements.Energy_density]
-measure_every = 1
+measure_every = 5
 kinds_of_energy_density = ["plaquette", "clover", "improved"]
 
 ["Measurement Settings".measurements.Gauge_action]
-measure_every = 1
+measure_every = 5
 kinds_of_gauge_action = ["wilson", "symanzik_tree", "iwasaki", "dbw2"]
 
 ["Measurement Settings".measurements.Plaquette]
-measure_every = 1
+measure_every = 5
 
 ["Measurement Settings".measurements.Polyakov_loop]
-measure_every = 1
+measure_every = 5
 
 ["Measurement Settings".measurements.Topological_charge]
-measure_every = 1
+measure_every = 5
 kinds_of_topological_charge = ["plaquette", "clover", "improved"]
 
 ["Measurement Settings".measurements.Wilson_loop]
-measure_every = 1
+measure_every = 5
 Rmax = 2
 Tmax = 2
 
 ["Measurement Settings".measurements.Pion_correlator]
-measure_every = 1
+measure_every = 5
 dirac_type = "wilson"
 
 ["Gradient Flow Settings"]
