--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,9 @@ authors = ["GianlucaFuwa <gianlucafuwa@gmail.com> and contributors"]
 version = "1.0.0"
 
 [deps]
-AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 AlgRemez_jll = "acb6dc63-88f0-54c7-a126-ccdc963b8b3f"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
-CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
@@ -30,6 +28,14 @@ StrideArraysCore = "7792a7ef-975c-4747-a70f-980b88e8d1da"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
+
+[weakdeps]
+AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+
+[extensions]
+GaugefieldsCUDAExt = "CUDA"
+GaugefieldsAMDGPUExt = "AMDGPU"
 
 [compat]
 AMDGPU = "0.7, 0.8"
