--- a/templates/parameters_fermions.toml
+++ b/templates/parameters_fermions.toml
@@ -10,8 +10,8 @@ parity_update = false
 
 ["Dynamical Fermion Settings"]
 fermion_action = "staggered"
-eo_precon = false
-Nf = [2]
+eo_precon = true
+Nf = [4]
 mass = [0.1]
 cg_tol_action = 1e-16
 cg_tol_md = 1e-16
@@ -22,8 +22,8 @@ cg_maxiters_md = 5000
 hmc_trajectory = 1
 hmc_steps = 5
 hmc_integrator = "OMF4"
-# hmc_numsmear_fermion = 7
-# hmc_rhostout_fermion = 0.12
+hmc_numsmear_fermion = 4
+hmc_rhostout_fermion = 0.12
 
 ["System Settings"]
 backend = "cpu"
@@ -33,28 +33,8 @@ randomseed = 0
 verboselevel = 1
 overwrite = true
 
-["Measurement Settings".measurements.Energy_density]
-measure_every = 5
-kinds_of_energy_density = ["plaquette", "clover", "improved"]
-
-["Measurement Settings".measurements.Gauge_action]
-measure_every = 5
-kinds_of_gauge_action = ["wilson", "symanzik_tree", "iwasaki", "dbw2"]
-
 ["Measurement Settings".measurements.Plaquette]
 measure_every = 5
-
-["Measurement Settings".measurements.Polyakov_loop]
-measure_every = 5
-
-["Measurement Settings".measurements.Topological_charge]
-measure_every = 5
-kinds_of_topological_charge = ["plaquette", "clover", "improved"]
-
-["Measurement Settings".measurements.Wilson_loop]
-measure_every = 5
-Rmax = 2
-Tmax = 2
 
 ["Measurement Settings".measurements.Pion_correlator]
 measure_every = 5
@@ -67,11 +47,4 @@ flow_steps = 1
 flow_tf = 0.12 # total flow time is flow_num * flow_tf
 flow_measure_every = 7
 
-["Gradient Flow Settings".measurements_with_flow.Topological_charge]
-measure_every = 10
-kinds_of_topological_charge = ["clover"]
-
-["Gradient Flow Settings".measurements_with_flow.Wilson_loop]
-measure_every = 10
-Rmax = 2
-Tmax = 2
+["Gradient Flow Settings".measurements_with_flow]
