Dont use Dicts in measurements

--- a/templates/parameters_fermions.toml
+++ b/templates/parameters_fermions.toml
@@ -1,10 +1,10 @@
 ["Physical Settings"]
-L = [12, 12, 12, 12]
+L = [4, 4, 4, 8]
 beta = 4.0
 kind_of_gaction = "symanzik_tree"
-numtherm = 10
-numsteps = 10
-initial = "cold"
+numtherm = 20
+numsteps = 100
+initial = "hot"
 update_method = "hmc"
 parity_update = false
 
@@ -13,9 +13,9 @@ fermion_action = "wilson"
 eo_precon = false
 Nf = [2]
 mass = [0.01]
-wilson_csw = 1.78
-cg_tol_action = 1e-14
-cg_tol_md = 1e-10
+wilson_csw = 1.0
+cg_tol_action = 1e-16
+cg_tol_md = 1e-16
 cg_maxiters_action = 5000
 cg_maxiters_md = 5000
 
@@ -37,20 +37,16 @@ overwrite = true
 ["Measurement Settings".measurements.Plaquette]
 measure_every = 10
 
-["Measurement Settings".measurements.Pion_correlator]
-measure_every = 10
-dirac_type = "wilson"
-
 ["Measurement Settings".measurements.Topological_charge]
 measure_every = 10
 kinds_of_topological_charge = ["clover"]
     
 ["Gradient Flow Settings"]
 flow_integrator = "euler"
-flow_num = 7
+flow_num = 30
 flow_steps = 1
 flow_tf = 0.12 # total flow time is flow_num * flow_tf
-flow_measure_every = 7
+flow_measure_every = 30
 
     ["Gradient Flow Settings".measurements_with_flow.Plaquette]
     measure_every = 10
@@ -59,9 +55,9 @@ flow_measure_every = 7
     measure_every = 10
     kinds_of_topological_charge = ["wilson"]
     mass = 0.01
-    cg_tol = 1e-14
+    cg_tol = 1e-16
     cg_maxiters = 5000
-    csw = 1.78
+    csw = 1.0
 
     ["Gradient Flow Settings".measurements_with_flow.Topological_charge]
     measure_every = 10
