Add dirac eigenvalue as measurement

--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.0.0"
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 AlgRemez_jll = "acb6dc63-88f0-54c7-a126-ccdc963b8b3f"
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+ArnoldiMethod = "ec485272-7323-5ecc-a04f-4719b315124d"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
