--- a/templates/parameters_ptmetad.toml
+++ b/templates/parameters_ptmetad.toml
@@ -1,7 +1,7 @@
 ["Physical Settings"]
 L = [16, 16, 16, 16]
 beta = 1.25
-kind_of_gaction = "dbw2"
+gauge_action = "dbw2"
 numtherm = 20
 numsteps = 1
 initial = "cold"
@@ -43,9 +43,7 @@ hmc_steps = 5
 hmc_integrator = "OMF4"
 
 ["System Settings"]               
-log_dir = "L16x16x16x16_dbw2_beta1.25/test_ptmetad"
-measurement_dir = "L16x16x16x16_dbw2_beta1.25/test_ptmetad"
-bias_dir = "L16x16x16x16_dbw2_beta1.25/test_ptmetad"
+ensemble_dir = "test_ptmetad"
 randomseed = 0
 verboselevel = 2
 overwrite = true
