--- a/templates/parameters_metad.toml
+++ b/templates/parameters_metad.toml
@@ -1,7 +1,7 @@
 ["Physical Settings"]
 L = [16, 16, 16, 16]
 beta = 1.25
-kind_of_gaction = "dbw2"
+gauge_action = "dbw2"
 numtherm = 5
 numsteps = 1
 initial = "cold"
@@ -41,9 +41,7 @@ hmc_integrator = "OMF4"
 ["System Settings"]
 backend = "cpu"
 float_type = "double"            
-log_dir = "L16x16x16x16_dbw2_beta1.25/test_metad"
-measurement_dir = "L16x16x16x16_dbw2_beta1.25/test_metad"
-bias_dir = "L16x16x16x16_dbw2_beta1.25/test_metad"
+ensemble_dir = "test_metad"
 randomseed = 0
 verboselevel = 2
 overwrite = true
