--- a/Project.toml
+++ b/Project.toml
@@ -48,13 +48,13 @@ CUDA = "4, 5"
 DelimitedFiles = "1.9"
 JLD2 = "0.4"
 KernelAbstractions = "0.9"
-LoopVectorization = "0.12"
+LoopVectorization = "0.12.170"
 MPI = "0.20"
-Polyester = "0.7.13"
+Polyester = "0.7.14"
 Requires = "1.3"
 StaticArrays = "1.6"
 TimerOutputs = "0.5"
-julia = "1.9"
+julia = "1.9, 1.10"
 
 [extras]
 MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
