--- a/templates/parameters_metad.toml
+++ b/templates/parameters_metad.toml
@@ -39,9 +39,8 @@ hmc_steps = 5
 hmc_integrator = "OMF4"
 
 ["System Settings"]
-backend = "cpu"
 float_type = "double"            
-ensemble_dir = "test_metad"
+ensemble_dir = "/data/MetaQCD/test_metad"
 randomseed = 0
 verboselevel = 2
 overwrite = true
