--- a/MetaAnalysis/Project.toml
+++ b/MetaAnalysis/Project.toml
@@ -10,17 +10,19 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
-Polyester = "f517fe37-dbe3-4b94-8317-1923a5111588"
+MetaQCD = "31f46e0f-f1ce-4e94-be20-2bb7f09e036f"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+SingularSpectrumAnalysis = "77f5812f-bd1f-5f6e-9b72-07b28d8bbbc3"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-BDIO = "=0.1.0"
 ADerrors = "=0.1.0"
+BDIO = "=0.1.0"
 julia = "1.9.1"
 
 [extras]
