--- a/templates/parameters_hmc.toml
+++ b/templates/parameters_hmc.toml
@@ -16,7 +16,7 @@ hmc_integrator = "OMF4"
 ["System Settings"]
 backend = "cpu"
 float_type = "double"         
-ensemble_dir = "/data/MetaQCD/test_hmc"
+# ensemble_dir = ""
 randomseed = 0
 verboselevel = 2
 overwrite = true
