--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -1,11 +1,13 @@
-name: CI
+name: Tests
+
 on:
-pull_request:
-  branches:
-    - dirac
+  pull_request:
+    branches:
+      - dirac
   push:
-  branches:
-    - dirac
+    branches:
+      - dirac
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -13,17 +15,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version:
-          - '1.9'
-          - '1.10'
-          - 'nightly'
-        juliacputhreads:
-          - 1
-          - 3
-        juliathreads:
-          - 1
-          - 2
-          - 4
+        version: ['1.9', '1.10', 'nightly']
+        juliacputhreads: [1, 3]
+        juliathreads: [1, 2, 4]
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@latest
