Try to get Test CI to work

--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -32,12 +32,7 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
-      - name: "Develop the libraries since they aren't registered"
-        run: |
-          julia --project=. -e '
-          using Pkg;
-          Pkg.develop(matp(path->Pkg.PackageSpec.(;path="$(@__DIR__)/lib/$(path)"), readdir("./lib")));
-          '
+      - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
         env:
           JULIA_NUM_THREADS: ${{ matrix.juliathreads }}
