--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,6 @@ version = "1.0.0"
 [deps]
 Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 AlgRemez_jll = "acb6dc63-88f0-54c7-a126-ccdc963b8b3f"
-Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 ArnoldiMethod = "ec485272-7323-5ecc-a04f-4719b315124d"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
@@ -44,7 +43,6 @@ MetaCUDAExt = "CUDA"
 [compat]
 AMDGPU = "0.7, 0.8"
 Accessors = "0.1"
-Aqua = "0.6"
 CUDA = "4.4.2"
 DelimitedFiles = "1.9"
 JLD2 = "0.4"
@@ -55,8 +53,12 @@ Polyester = "0.7.14"
 Requires = "1.3"
 StaticArrays = "1.6"
 TimerOutputs = "0.5"
-julia = "~1.9"
+julia = "1.9"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test", "Aqua"]
