--- a/.github/workflows/Benchmarks.yml
+++ b/.github/workflows/Benchmarks.yml
@@ -1,7 +1,12 @@
-name: Run benchmarks
+name: Benchmarks
 
 on:
   pull_request:
+    branches:
+      - dirac
+  push:
+    branches:
+      - dirac
 
 jobs:
   Benchmark:
@@ -10,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
         with:
-          version: 1.9
+          version: "1.9.4"
       - name: Install dependencies
         run: julia -e 'using Pkg; pkg"add PkgBenchmark BenchmarkCI@0.1"'
       - name: Run benchmarks
