origin as positional in benchmark

--- a/.github/workflows/Benchmarks.yml
+++ b/.github/workflows/Benchmarks.yml
@@ -28,7 +28,7 @@ jobs:
                       "OMP_NUM_THREADS" => "1",
                   ),
               ),
-              baseline="origin/dirac";
+              "origin/dirac";
           );
           '
       - name: Push results
