Fix CI and docs

--- a/templates/parameters_fermions.toml
+++ b/templates/parameters_fermions.toml
@@ -7,22 +7,22 @@ numsteps = 10
 initial = "cold"
 update_method = "hmc"
 parity_update = false
-numprocs_cart = [2, 2, 1, 1]
+numprocs_cart = [1, 1, 1, 1]
 halo_width = 1
 
-# ["Dynamical Fermion Settings"]
-# fermion_action = "staggered"
-# eo_precon = false
-# Nf = [2]
-# mass = [0.01]
-# wilson_csw = 1.0
-# cg_tol_action = 1e-16
-# cg_tol_md = 1e-16
-# cg_maxiters_action = 5000
-# cg_maxiters_md = 5000
-# rhmc_spectral_bound = [0.0001, 6.0]
-# rhmc_prec_action = 64
-# rhmc_prec_md = 64
+["Dynamical Fermion Settings"]
+fermion_action = "staggered"
+eo_precon = true
+Nf = [2]
+mass = [0.01]
+wilson_csw = 1.0
+cg_tol_action = 1e-16
+cg_tol_md = 1e-16
+cg_maxiters_action = 5000
+cg_maxiters_md = 5000
+rhmc_spectral_bound = [0.0001, 6.0]
+rhmc_prec_action = 64
+rhmc_prec_md = 64
 
 ["HMC Settings"]
 hmc_trajectory = 1
@@ -36,7 +36,7 @@ float_type = "double"
 ensemble_dir = "/home/gialuf/data/MetaQCD/test_fermions"
 randomseed = 0
 overwrite = true
-save_checkpoint_every = 100
+save_checkpoint_every = 10
 verboselevel = 1
 log_to_console = true
 # load_checkpoint_fromfile = true
